--- a/src/app/client/src/app/plugins/profile/components/personal-details/personal-details.component.html
+++ b/src/app/client/src/app/plugins/profile/components/personal-details/personal-details.component.html
@@ -91,18 +91,6 @@
             />
           </mat-form-field>
 
-          <mat-form-field appearance="outline">
-            <mat-label>Designation</mat-label>
-            <mat-select formControlName="designation">
-              <mat-option
-                *ngFor="let option of positions"
-                [value]="option.name"
-                >{{ option.name }}</mat-option
-              >
-            </mat-select>
-            <!-- <mat-hint align="end">Here's the dropdown arrow ^</mat-hint> -->
-          </mat-form-field>
-
           <!-- <div *ngFor = "let field of formData.colOne.radio" class="form-group">
                   <label for="{{field.value}}">{{field.label}}</label>
                   <mat-radio-group formControlName="{{field.value}}">
@@ -156,6 +144,17 @@
           </mat-autocomplete>
         </mat-form-field> -->
           <mat-form-field appearance="outline">
+            <mat-label>Designation</mat-label>
+            <mat-select formControlName="designation">
+              <mat-option
+                *ngFor="let option of positions"
+                [value]="option.name"
+                >{{ option.name }}</mat-option
+              >
+            </mat-select>
+            <!-- <mat-hint align="end">Here's the dropdown arrow ^</mat-hint> -->
+          </mat-form-field>
+          <mat-form-field appearance="outline">
             <mat-label>Domicile Medium (Mother Tongue)</mat-label>
             <input
               matInput
@@ -166,7 +165,7 @@
             />
             <!-- <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint> -->
           </mat-form-field>
-          <mat-form-field appearance="outline">
+          <!-- <mat-form-field appearance="outline">
             <mat-label>Other languages known</mat-label>
             <input
               matInput
@@ -175,8 +174,41 @@
               formControlName="otherLanguages"
               placeholder="Type here"
             />
-            <!-- <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint> -->
+          </mat-form-field> -->
+          <mat-form-field class="example-chip-list" appearance="outline">
+            <mat-label>Other languages known</mat-label>
+            <mat-chip-list #languageChipList aria-label="Language selection">
+              <mat-chip
+                *ngFor="let language of languages"
+                (removed)="removeLanguage(language)"
+              >
+                {{ language }}
+                <button matChipRemove>
+                  <mat-icon>cancel</mat-icon>
+                </button>
+              </mat-chip>
+              <input
+                placeholder="Type here"
+                #languageInput
+                [formControl]="knownLanguagesCtrl"
+                [matChipInputFor]="languageChipList"
+                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                (matChipInputTokenEnd)="addLanguages($event)"
+              />
+            </mat-chip-list>
+            <mat-autocomplete
+              #auto="matAutocomplete"
+              (optionSelected)="selected($event)"
+            >
+              <mat-option
+                *ngFor="let language of filteredLanguages | async"
+                [value]="language"
+              >
+                {{ language }}
+              </mat-option>
+            </mat-autocomplete>
           </mat-form-field>
+
           <!-- <mat-form-field appearance="outline">
             <mat-label>Mobile number</mat-label>
             <input
@@ -188,17 +220,6 @@
             />
             <span matPrefix> +91&nbsp; </span>
           </mat-form-field> -->
-          <mat-form-field appearance="outline">
-            <mat-label>Telephone Number</mat-label>
-            <input
-              matInput
-              #input
-              formControlName="telephone"
-              placeholder="Type here"
-              required
-            />
-            <!-- <span matPrefix> +91&nbsp; </span>   -->
-          </mat-form-field>
           <mat-form-field class="example-chip-list" appearance="outline">
             <mat-label>Areas of interest</mat-label>
             <mat-chip-list #chipList aria-label="Area selection">
@@ -231,7 +252,12 @@
           </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Date of joining</mat-label>
-            <input matInput formControlName="doj" [matDatepicker]="picker" />
+            <input
+              matInput
+              formControlName="doj"
+              [matDatepicker]="picker"
+              required
+            />
             <mat-datepicker-toggle
               matIconSuffix
               [for]="picker"
