Modified the fetchRecommendedCourses function

--- a/src/app/client/src/app/modules/explore-page/components/explore-page/explore-page.component.html
+++ b/src/app/client/src/app/modules/explore-page/components/explore-page/explore-page.component.html
@@ -262,11 +262,11 @@
     </div>
   </div>
   <!-- Recently published courses -->
+<!-- Recommended published courses -->
   <div class="grey-bg">
-    <!-- Recently published courses -->
     <div *ngIf="recommendedCourses && recommendedCourses.length > 0"  class="container ui">
       <div class="popular-card-title d-flex flex-jc-space-between flex-ai-center mb-32">
-        {{resourceService?.frmelmnts?.llp?.recentlyPubCourses}}
+        {{resourceService?.frmelmnts?.llp?.recommendedCourses}}
         <!--span><button class="com-secondary-btn">Explore</button></span-->
       </div>
       <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="sliderConfig"
@@ -279,7 +279,7 @@
       </ngx-slick-carousel>
     </div>
   </div>
-  
+  <!-- Recommended published courses -->
   <section class="mt-4rem container ui" *ngIf="browseByCard">
     <p class="ui container browseTitle mb-32">{{resourceService?.frmelmnts?.llp?.browseByCardInfo.title}}</p>
     <div class="ui grid">
