Added few modifications in the academicDetails tab

--- a/src/app/client/src/app/plugins/profile/components/academic-details/academic-details.component.html
+++ b/src/app/client/src/app/plugins/profile/components/academic-details/academic-details.component.html
@@ -183,7 +183,7 @@
       class="form-container"
     >
       <div class="form-column">
-        <p>Additional Qualification {{ i + 1 }}</p>
+        <p>Additional Post Graduation {{ i + 1 }}</p>
 
         <mat-form-field appearance="outline">
           <mat-label>Degree</mat-label>
